# net-agent-harness

./: .env.example  .gitignore  AGENTS.md  README.md  fix_tests.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  lint-type-check.yml  pytest.yml  security.yml  semgrep-weekly.yml
docs/: 01_architecture.md  02_lifecycle.md  03_control_plane.md  04_artifact_model.md  05_tool_layer.md  06_permissions_model.md  architecture.md
src/net_agent_harness/: config.py  main.py
src/net_agent_harness/adapters/: inventory_adapter.py  ipam_adapter.py  mock_inventory_adapter.py  mock_ipam_adapter.py  netbox_adapter.py  topology_adapter.py
src/net_agent_harness/agents/: agent_factory.py  change_planner.py  config_render_agent.py  validation_agent.py
src/net_agent_harness/glossaries/: core_terms.yaml  render_context_routing.yaml  render_context_vlan.yaml
src/net_agent_harness/models/: __init__.py  artifacts.py  changes.py  common.py  domain.py  enums.py  incident.py  intent.py  inventory.py  ipam.py  lifecycle.py  resources.py  routing.py  site_provisioning.py  site_template.py  topology.py
src/net_agent_harness/orchestration/: build_render.py  coordinator.py  dependency_resolver.py  desired_state_normalizer.py  dispatcher.py  domain_loader.py  graph_runner.py  graph_state.py  intent_router.py  platform_constraints.py  read_only_answer.py  resolve_backend.py  rollback_builder.py  run_context.py  scope_validator.py  stream_utils.py
src/net_agent_harness/policies/: approvals.py  tool_registry.py
src/net_agent_harness/services/: artifact_store.py  run_progress_reporter.py  run_store.py
src/net_agent_harness/tools/: config_tools.py  evaluation.py  inventory_tools.py  ipam_tools.py  topology_tools.py  (+2 more)
tests/: test_api_operations.py  test_artifact_store.py  test_build_render.py  test_changes_migration.py  test_cli_snippets.py  test_config_render_agent.py  test_config_tools.py  test_coordinator.py  test_dependency_resolver.py  test_desired_state_normalizer.py  test_direct_api_apply.py  test_direct_api_render.py  test_dispatcher.py  test_domain_loader.py  test_evaluation.py  test_graph_runner.py  test_incident_model.py  test_intent_models.py  test_intent_router.py  test_inventory_tools.py  test_ipam_plan.py  test_ipam_tools.py  test_lifecycle.py  test_main.py  test_models.py  test_multi_domain_scenarios.py  test_new_workflow_runners.py  test_operation_applicability.py  test_policies.py  test_read_only_answer.py  test_relationship_dedup.py  test_render_acceptance.py  test_render_context_yaml.py  test_render_pipeline.py  test_resolve_backend.py  test_resources_model.py  test_rollback_builder.py  test_routing_render_payload.py  test_run_store.py  test_scope_validator.py  (+12 more)
tests/fixtures/: sample_change_request.json
(+7 files in other folders)
