[project]
name = "net-agent-harness"
version = "0.1.0"
description = "Personal network engineering agent harness prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "pydantic-ai>=1.107.0",
  "ollama>=0.6.2",
  "typer>=0.26.7",
  "rich>=15.0.0",
  "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.16",
  "mypy>=2.1.0",
]

[project.scripts]
net-agent = "net_agent_harness.main:app"

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
